Update AudioLive, Version: 170901_174446_master-0-gde02caa_bn73_12_AUDIOHD

--- a/ios/AudioLive/AudioLive/Base.lproj/Localizable.strings
+++ b/ios/AudioLive/AudioLive/Base.lproj/Localizable.strings
@@ -5,112 +5,72 @@
   Created by Strong on 16/7/18.
   Copyright © 2016年 ZEGO. All rights reserved.
 */
-"删除" = "删除";
 
-"打开" = "打开";
-"同意" = "同意";
-"拒绝" = "拒绝";
+"ZEGO(国内版)" = "ZEGO(国内版)";
+"ZEGO(国际版)" = "ZEGO(国际版)";
+"ZEGO(自定义)" = "ZEGO(自定义)";
 
-"%@ 请求与你视频聊天" = "%@ 请求与你视频聊天";
-"当前已登录" = "当前已登录";
-"开始登录房间" = "开始登录房间";
-"当前未登录或进入了私聊房间" = "当前未登录或进入了私聊房间";
-"离开房间" = "离开房间";
-"登录房间成功. token %d, id %d" = "登录房间成功. token %d, id %d";
-"登录房间失败. error: %d" = "登录房间失败. error: %d";
-"离开房间结果. error: %d" = "离开房间结果. error: %d";
-"断开房间. token %d, id %d" = "断开房间. token %d, id %d";
-"断开房间. error: %d" = "断开房间. error: %d";
-"ZEGO(登录中...)" = "ZEGO(登录中...)";
-"ZEGO" = "ZEGO";
-"ZEGO(离线)" = "ZEGO(离线)";
-
-"%@ 请求与你视频聊天" = "%@ 请求与你视频聊天";
-"取消" = "取消";
-"允许" = "允许";
+"请输入 AppID" = "请输入 AppID";
+"请输入 AppSign" = "请输入 AppSign";
+"AppSign 已设置" = "AppSign 已设置";
 "日志上传成功" = "日志上传成功";
-"没有用户在线，可能无法进行视频聊天" = "没有用户在线，可能无法进行视频聊天";
-"继续" = "继续";
+"确定" = "确定";
+"无法发送邮件" = "无法发送邮件";
+"请先在手机的 [设置>邮件] 中添加可使用账户并开启邮件服务" = "请先在手机的 [设置>邮件] 中添加可使用账户并开启邮件服务";
+"日志文件压缩失败" = "日志文件压缩失败";
+"请重新输入！" = "请重新输入！";
+"该字段不可为空" = "该字段不可为空";
+"日志邮件发送成功" = "日志邮件发送成功";
+"日志邮件发送失败" = "日志邮件发送失败";
+"请稍后重试" = "请稍后重试";
 
-"等待对方同意..." = "等待对方同意...";
-"退出大厅..." = "退出大厅...";
-"创建断开之前相同的流" = "创建断开之前相同的流";
-"所有人都退出了聊天" = "所有人都退出了聊天";
-"对方可能无法响应" = "对方可能无法响应";
-"开始登录私有房间,房间ID: 0x%x" = "开始登录私有房间,房间ID: 0x%x";
-"对方拒绝了您的请求" = "对方拒绝了您的请求";
-"所有人都拒绝了您的请求" = "所有人都拒绝了您的请求";
-"开始登录私有房间..." = "开始登录私有房间...";
-"退出大厅,开始登录私有房间" = "退出大厅,开始登录私有房间";
-"退出视频聊天..." = "退出视频聊天...";
-"创建流" = "创建流";
-"开始获取直播流列表" = "开始获取直播流列表";
-"新增一条流, 流ID:%@" = "新增一条流, 流ID:%@";
-"视频聊天中..." = "视频聊天中...";
-"删除一条流, 流ID:%@" = "删除一条流, 流ID:%@";
-"对方退出视频聊天" = "对方退出视频聊天";
-"登录私有房间成功" = "登录私有房间成功";
-"ID不同" = "ID不同";
-"与对方连接中..." = "与对方连接中...";
-"登录私有房间失败" = "登录私有房间失败";
-"退出房间, error: %d" = "退出房间, error: %d";
-"创建流失败" = "创建流失败";
-"流列表有更新,先缓存" = "流列表有更新,先缓存";
-"流更新列表为空" = "流更新列表为空";
-"登录channel" = "登录channel";
-"登录channel失败, error:%d" = "登录channel失败, error:%d";
-"登录channel成功" = "登录channel成功";
-"开始直播，流ID:%@" = "开始直播，流ID:%@";
-"继续播放之前的流, 流ID:%@" = "继续播放之前的流, 流ID:%@";
-"发布直播成功,流ID:%@" = "发布直播成功,流ID:%@";
-"视频结束,流ID:%@" = "视频结束,流ID:%@";
-"视频结束,流ID：%@, error:%d" = "视频结束,流ID：%@, error:%d";
-"与对方连接中断..." = "与对方连接中断...";
-"播放流成功, 流ID: %@" = "播放流成功, 流ID: %@";
-"播放流失败, 流ID:%@, error: %d" = "播放流失败, 流ID:%@, error: %d";
-"重新播放, 流ID:%@" = "重新播放, 流ID:%@";
 
-"无美颜" = "无美颜";
-"磨皮" = "磨皮";
-"全屏美白" = "全屏美白";
-"磨皮＋全屏美白" = "磨皮＋全屏美白";
-"磨皮+皮肤美白" = "磨皮+皮肤美白";
-"无滤镜" = "无滤镜";
-"简洁" = "简洁";
-"黑白" = "黑白";
-"老化" = "老化";
-"哥特" = "哥特";
-"锐色" = "锐色";
-"淡雅" = "淡雅";
-"酒红" = "酒红";
-"青柠" = "青柠";
-"浪漫" = "浪漫";
-"光晕" = "光晕";
-"蓝调" = "蓝调";
-"梦幻" = "梦幻";
-"夜色" = "夜色";
-"设置" = "设置";
-"美颜" = "美颜";
-"滤镜" = "滤镜";
-"前置摄像头" = "前置摄像头";
-"麦克风" = "麦克风";
-"手电筒" = "手电筒";
-"启用摄像头" = "启用摄像头";
-"静音" = "静音";
+"直播视频,访问麦克风" = "直播视频,访问麦克风";
+"需要访问麦克风" = "需要访问麦克风";
+"开始加入session: %@" = "开始加入session: %@";
+"开始登录房间: %@" = "开始登录房间: %@";
+"加入session失败: %d" = "加入session失败: %d";
+"登录房间失败: %d" = "登录房间失败: %d";
+"加入session成功" = "加入session成功";
+"登录房间成功" = "登录房间成功";
+"开始直播" = "开始直播";
+"开播失败，直播流超过上限" = "开播失败，直播流超过上限";
+"停止直播" = "停止直播";
+"取消" = "取消";
+"设置权限" = "设置权限";
+"推流成功: %@" = "推流成功: %@";
+"推流成功" = "推流成功";
+"开始直播" = "开始直播";
+"推流失败: %@, error:%d" = "推流失败: %@, error:%d";
+"推流失败:%d" = "推流失败:%d";
+"拉流失败: %@, error: %d" = "拉流失败: %@, error: %d";
+"拉流成功" = "拉流成功";
+"拉流成功: %@" = "拉流成功: %@";
+"拉流失败: %d" = "拉流失败: %d";
+"连接房间失败 %d" = "连接房间失败 %d";
+"新增流:%@" = "新增流:%@";
+"用户%@进入,开始拉流" = "用户%@进入,开始拉流";
+"删除流:%@" = "删除流:%@";
+"用户%@退出,停止拉流" = "用户%@退出,停止拉流";
+"用户列表已全量更新" = "用户列表已全量更新";
+"用户列表增量更新" = "用户列表增量更新";
+"%@ 用户进入房间" = "%@ 用户进入房间";
+"%@ 用户离开房间" = "%@ 用户离开房间";
 
-"超低质量" = "超低质量";
-"低质量" = "低质量";
-"标准质量" = "标准质量";
-"高质量" = "高质量";
-"超高质量" = "超高质量";
+"国内版" = "国内版";
+"国际版" = "国际版";
 "自定义" = "自定义";
 
-"Zego Only" = "ZegoLiveRoom是Zego Demo的业务实现，客户需要自己来实现这一块的逻辑，不能使用Demo的这一块集成。";
-"需要访问相机" = "需要访问你的相机";
-"需要访问麦克风" = "需要访问麦克风";
-"直播视频,访问相机" = "要直播视频,需要访问你的相机权限,点击\"设置\"前往系统设置允许访问你的相机";
-"直播视频,访问麦克风" = "要直播视频,需要访问你的麦克风权限，点击\"设置\"前往系统设置允许访问你的麦克风";
-"设置权限" = "设置";
+"打开麦克风" = "打开麦克风";
+"关闭麦克风" = "关闭麦克风";
+"用户: %@" = "用户: %@";
+" (自己)" = " (自己)";
+"流-%ld: " = "流-%ld: ";
 
-"没有安装QQ" = "没有安装QQ";
-"联系我们" = "QQ:84328558\n微信:84328558";
+"分享日志文件失败" = "分享日志文件失败";
+"压缩日志文件失败，请稍后重试" = "压缩日志文件失败，请稍后重试";
+
+
+
+
+
