--- a/ios/AudioLive/AudioLive/en.lproj/Main.strings
+++ b/ios/AudioLive/AudioLive/en.lproj/Main.strings
@@ -56,6 +56,9 @@
 /* Class = "UILabel"; text = "Upload Log"; ObjectID = "M7Z-nC-fxt"; */
 "M7Z-nC-fxt.text" = "Upload Log";
 
+/* Class = "UILabel"; text = "Share Log"; ObjectID = "aGP-li-ZUX"; */
+"aGP-li-ZUX.text" = "Share Log";
+
 /* Class = "UINavigationItem"; title = "日志"; ObjectID = "NhF-dW-V9B"; */
 "NhF-dW-V9B.title" = "Log";
 
