--- a/android/AudioLive/app/src/main/res/values-zh-rCN/strings.xml
+++ b/android/AudioLive/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,33 +2,33 @@
     <string name="zg_app_name"></string>
     <string name="zg_app_title"></string>
     <string name="zg_app_title_bak">(%1$s)</string>
-    <string name="zg_login_room">登录房间</string>
+    <string name="zg_login_room">登录</string>
     <string name="zg_logout_room">关闭</string>
     <string name="zg_start_call">拨打电话</string>
     <string name="zg_stop_call">挂断电话</string>
     <string name="zg_start_communicate">开始语音</string>
     <string name="zg_stop_communicate">停止语音</string>
-    <string name="zg_tip_input_room_name">输入房间ID</string>
+    <string name="zg_tip_input_room_name">输入ID</string>
     <string name="zg_tip_no_stream">没有流数据</string>
     <string name="zg_tip_no_events">没有数据</string>
     <string name="zg_tip_send_message_failed">消息发送失败</string>
     <string name="zg_tip_login_success">登录成功</string>
     <string name="zg_tip_login_failed">登录失败</string>
     <string name="zg_tip_login_failed_state">登录失败: %1$d</string>
-    <string name="zg_tip_begin_login_room">开始登录房间：%1$s</string>
+    <string name="zg_tip_begin_login_room">开始登录：%1$s</string>
     <string name="zg_tip_stop_publish">停止推流</string>
     <string name="zg_tip_play_stream_success">拉流成功：%1$s</string>
     <string name="zg_tip_play_stream_failed">拉流失败：%1$d</string>
     <string name="zg_tip_publish_stream_success">推流成功</string>
     <string name="zg_tip_publish_stream_failed">推流失败：%1$d</string>
-    <string name="zg_tip_user_leave_a_room">用户 %1$s 离开房间</string>
-    <string name="zg_tip_user_enter_a_room">用户 %1$s 进入房间</string>
+    <string name="zg_tip_user_leave_a_room"> %1$s 离开</string>
+    <string name="zg_tip_user_enter_a_room"> %1$s 进入</string>
     <string name="zg_tip_parameter_illegal">参数非法</string>
     <string name="zg_tip_appid_format_illegal">应用 Id 格式非法</string>
     <string name="zg_tip_appkey_must_32_bits">AppKey 必须为32位</string>
     <string name="zg_tip_receive_server_message">收到自定义消息: %1$s</string>
-    <string name="zg_tip_user_kickout">被踢出房间: %1$s，错误码: %2$d</string>
-    <string name="zg_tip_user_disconnect">与房间: %1$s 断开连接，错误码: %2$d</string>
+    <string name="zg_tip_user_kickout">被踢出: %1$s，错误码: %2$d</string>
+    <string name="zg_tip_user_disconnect">与: %1$s 断开连接，错误码: %2$d</string>
 
     <string name="zg_menu_main_show_events">日志</string>
     <string name="zg_menu_logs_upload_log">上传日志</string>
@@ -50,8 +50,8 @@
     <string name="zg_text_app_flavor">App版本</string>
     <string name="zg_text_app_id">应用 Id: </string>
     <string name="zg_text_app_key">应用签名: </string>
-    <string name="zg_text_user_id">用户 Id: </string>
-    <string name="zg_text_user_name">用户名: </string>
+    <string name="zg_text_user_id"> Id: </string>
+    <string name="zg_text_user_name">名: </string>
 
     <string name="zg_text_app_flavor_china">国内版</string>
     <string name="zg_text_app_flavor_intl">国际版</string>
