--- a/android/AudioLive/app/src/main/res/values-zh-rCN/strings.xml
+++ b/android/AudioLive/app/src/main/res/values-zh-rCN/strings.xml
@@ -36,8 +36,8 @@
 
     <string name="zg_btn_text_mute">静音</string>
     <string name="zg_btn_text_mute_off">关闭静音</string>
-    <string name="zg_btn_text_aux">开启背景音</string>
-    <string name="zg_btn_text_aux_off">关闭背景音</string>
+    <string name="zg_btn_text_aux">接收通话音源</string>
+    <string name="zg_btn_text_aux_off">关闭通话音源</string>
     <string name="zg_btn_text_record_on">录音</string>
     <string name="zg_btn_text_record_off">停止录音</string>
     <string name="zg_btn_text_mic_on">开麦克风</string>
